--- a/styles/pages/contato.css
+++ b/styles/pages/contato.css
@@ -5,7 +5,7 @@
 
 /*-------------Hero-----------*/
 #hero{
-    background-image: url("/images/hero.png");
+    background-image: url("../../images/hero.png");
     background-repeat: no-repeat;
     background-size: cover;
     height: 450px;
