--- a/styles/pages/contato.css
+++ b/styles/pages/contato.css
@@ -1,6 +1,5 @@
 *{
-    font-family: 'Montserrat', sans-serif;
-    
+    font-family: 'Montserrat', sans-serif;  
 }
 
 /*-------------Hero-----------*/
@@ -11,15 +10,13 @@
     height: 450px;
     width: 100%;
     margin-top: 3.5rem;
+    display: flex;
+    align-items: center;
 }
 
 #hero h2{
     color: white;
     margin-left: 2rem;
-}
-
-.texts-hero{
-    margin-bottom: 3rem;
 }
 
 .button{
@@ -31,10 +28,15 @@
     color: var(--color-primary);
     cursor: pointer;
     font-weight: bold;
+    width: 50%;
+    text-align: center;
 }
 
 .infos-hero{
-    top: 5rem;
+    height: max-content;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .infos-hero a:link{
@@ -44,11 +46,11 @@
 /*-------------Main-----------*/
 
 .main-home{
-    height: 500px;
     width: 100%;
+    padding: 2rem;
 }
 
-.main-home h2{
+.clients h2{
     text-align: center;
     margin-top: 2rem;
     font-weight: 900;
@@ -56,7 +58,6 @@
 }
 
 .clients{
-    padding: 2rem;
     max-width: 100%;
     overflow-x: hidden;
 }
@@ -77,7 +78,7 @@
 .bg-blue{
     height: 300px;
     width: 100%;
-    background: #455A64;
+    background: linear-gradient(180deg, #455A64 0%, #403C3C 100%);
     margin-top: -18rem;
 }
 
@@ -172,7 +173,7 @@
 
 .button-wpp{
     background: #27B43E;
-    opacity: 0.7;
+    opacity: 0.9;
     padding: 1rem 1.5rem;
     margin-top: 1rem;
     text-align: center;
@@ -207,6 +208,7 @@
 .text-social-medias{
     margin-top: 3rem;
     margin-bottom: 2rem;
+    font-weight: 600;
 }
 
 .info-icons a{
@@ -216,3 +218,186 @@
     padding: 1rem;
     cursor: pointer;
 }
+
+/*-------------MEDIA QUERIES-----------*/
+
+/* X-Small devices (portrait phones, less than 576px)*/
+@media (max-width: 575.98px)  {
+
+    body{
+        overflow-x: hidden;
+    }
+
+    header{
+        zoom: 0.8
+    }
+
+    #hero{
+        zoom: 0.5;
+        margin-top: 5rem;
+    }
+
+    .texts-hero{
+        zoom: 0.9;
+    }
+
+    .infos-hero{
+        top: 3rem;
+    }
+
+    .texts-hero{
+        zoom: 0.9;
+    }
+
+    .main-home{
+        zoom: 0.7;
+        padding: 0.5rem;
+    }
+
+    .main-home img{
+        zoom: 0.5;
+    }
+
+    .form{
+        margin-left: 0;
+    }
+
+    main h2{
+        zoom: 0.5;
+    }
+
+    .form{
+        width: 120%;
+    }
+
+    .form-infos{
+        display: none;
+    }
+
+    .main-form-content{
+        zoom: 0.8;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    #h4-form{
+        display: none;
+    }
+
+ }
+
+/* Small devices (landscape phones, less than 768px)*/
+@media (min-width: 576px) and (max-width: 767.98px) { 
+
+    #hero{
+        zoom: 0.7;
+        background-position: -50px;
+    }
+
+    .texts-hero{
+        zoom: 0.9;
+    }
+
+    .infos-hero{
+        top: 3rem;
+    }
+
+    .main-home{
+        zoom: 0.7;
+        padding: 0.5rem;
+    }
+
+    .form{
+        margin-left: 2rem;
+        width: 80%;
+    }
+
+    .form-infos{
+        margin-top: 7rem;
+    }
+
+    .main-form{
+        zoom: 0.7;
+    }
+
+    .button-wpp{
+        zoom: 0.8;
+    }
+
+    .footer-icons{
+        display: none !important;
+    }
+
+    #h4-form{
+        display: none;
+    }
+ }
+
+/* Medium devices (tablets, less than 992px)*/
+@media (min-width: 768px) and (max-width: 991.98px){ 
+
+    #hero{
+        zoom: 0.7;
+    }
+
+    .texts-hero{
+        margin-bottom: 0;
+    }
+
+    .main-home{
+        zoom: 0.8;
+        padding: 0.5rem;
+    }
+
+    .form{
+        margin-left: 5rem;
+        width: 75%;
+    }
+
+    .form-infos{
+        margin-top: 5rem;
+    }
+
+    .main-form{
+        zoom: 0.8;
+    }
+
+    .button-wpp{
+        zoom: 0.8;
+    }
+
+    #h4-form{
+        display: none;
+    }
+
+ }
+
+/* Large devices (desktops, less than 1200px)*/
+@media (min-width: 992px) and (max-width: 1199.98px){ 
+
+    #hero{
+        zoom: 0.9;
+    }
+
+    .main-home{
+        padding: 0.5rem;
+        zoom: 0.8;
+    }
+
+    .form{
+        margin-left: 5rem;
+        width: 70%;
+    }
+
+    .form-infos{
+        margin-top: 2.5rem;
+    }
+
+ }
+
+/* X-Large devices (large desktops, less than 1400px)*/
+@media (min-width: 1200px){ 
+   
+ }
